www/slide/standardStyling.css
/* ... */
/*
    Section specific for the big image boxes
*/

.item--big-container {
  height: fit-content;
  width: 100%;
  display: flex;
  gap: 2rem;
  padding: 1rem;
}

.item--big-picture-container {
  height: 100%;
  width: 100%;
  overflow: hidden;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 100%;
  justify-items: center;
  align-items: center;
  padding: 1rem;
}

.item--big-picture {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 100%;
  justify-items: center;
  align-items: center;
  overflow: hidden;
  /*padding-top: 200px;*/ /*Why?*/
}

.item--big-image {
  grid-area: 1/1/1/1;
  /* height: 93.5%; */
  height: auto;
  width: 100%;
}

.item--big-title {
  display: flex;
  justify-content: center;
  padding: 2% 5% 2% 5%;
  color: var(--global-color-title);
  font-size: 200%;
}

.item--big-graph-container {
  width: 80%;
  height: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.item--big-graph-canvas {
  display: flex;
  width: 100% !important;
  height: 100% !important;
  padding: 1rem;
  justify-content: center;
}

.item--big-image-legend-title {
  font-size: 2rem;
  font-weight: bold;
  display: flex;
  padding-bottom: 1rem;
}

.item--big-image-legend {
  height: 100%;
  width: 100%;
  display: flex;
  padding-top: 4rem;
}

.item--big-image-legend-item:before {
  content: "- ";
}

.item--big-image-legend-style {
  padding: 0;
  padding-bottom: 1rem;
}

.item--big-image-legend-item {
  font-size: 1.5rem;
  padding-bottom: 1rem;
}

.item--big-left-big,
.item--big-right-big {
  overflow: hidden;
  padding: 1rem;
}

.item--big-left-full {
  height: max-content;
}

.item--medium-quiz-above {
  height: max-content;
}

/*
  Section specific for the big slideshow box
*/

.item--big-slide-container {
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: relative;
}

.item--big-slide-image {
  padding: 1rem;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

/*
    Section specific for the data shown in the small and medium compare boxes
*/

.item--value {
  padding-right: 3%;
  font-size: 200%;
  font-weight: bold;
  line-height: 2rem;
}

.item--unit {
  font-weight: 400;
  font-size: 125%;
  margin-top: auto;
}

/*
    Section specific for the data shown in the medium data boxes
*/

.item--medium-value {
  font-weight: bold;
  font-size: 150%;
}

.item--medium-unit {
  font-size: 90%;
  padding-left: 5%;
  padding-bottom: 1px;
  font-weight: 400;
  align-self: flex-end;
}

/*
  Section specific for the activity data shown in the medium boxes
*/

.item--medium-slide-container {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 1.2rem;
  gap: 5%;
}

.item--medium-slide-text {
  font-size: 150%;
}

.item--medium-slide-text span {
  font-weight: bold;
  color: var(--global-color-title);
}

.item--medium-slide-icon {
  height: 70px;
  width: 70px;
}

.item--medium-activities-container {
  height: 100%;
  width: 100%;
  padding: 1rem;
  display: grid;
  grid-template-rows: fit-content auto;
}

.item--medium-activities-title {
  font-size: 175%;
  font-weight: bold;
  display: flex;
  justify-content: center;
}

.item--medium-activities-summary-container {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: 50% 50%;
  grid-template-rows: 50% 50%;
  align-items: center;
  justify-content: center;
}

.item--medium-activities-summary {
  font-size: 120%;
  justify-items: center;
  align-items: center;
  display: grid;
  grid-template-columns: repeat(2, auto);
  grid-template-rows: repeat(2, auto);
  gap: 30%;
  row-gap: 20%;
  padding-top: 5%;
  padding-bottom: 10%;
}

.item--medium-activities-summary-item {
  display: grid;
  gap: 10px;
  align-items: center;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  margin: auto;
}

.item--medium-activities-summary-picture {
  justify-self: end;
}
.item--medium-activities-summary-text {
  justify-self: start;
}

.item--medium-activities-summary-picture {
  width: 70px;
  height: 70px;
  border-radius: 100%;
}

.item--medium-activities-summary-image path {
  fill: var(--global-color-neutral);
}

.item--medium-activities-summary-text {
  font-size: 120%;
}

/*
    Section specific for the medium box with explanation about the flywheel and turbine chimney
*/

.item--medium-explanation-beneath-container {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

.item--medium-explanation-beneath-text {
  font-size: 1.5rem;
}

/*
    Section specific for the medium box with images
*/

.item--medium-images-right {
  padding: 1rem;
  height: max-content;
  align-self: end;
}

.item--medium-images-picture {
  overflow: hidden;
  height: 100%;
  width: 100%;
  display: grid;
  align-items: center;
  justify-items: center;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  position: relative;
}

.item--medium-images-image {
  width: 100%;
  height: auto;
}

.item--medium-images-image-left {
  top: 0;
  left: 0;
  padding-right: 10rem;
}

.item--medium-images-image-right {
  height: 100%;
  width: 48%;
  top: 0;
  left: calc(1rem + 50%);
}

/*
    Overlay image box
*/

.item--overlay-children {
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 100%;
  align-items: center;
  justify-items: center;
  position: relative;
  width: 100%;
  height: 100%;
}

.item--overlay-children > * {
  position: absolute;
  height: 100%;
  width: auto;
  grid-area: 1/1/1/1;
  padding: 0;
}

/*
    Section specific for the medium box with the explanation
*/

.item--medium-explanation-container {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-rows: repeat(3, 33%);
  padding: 1rem;
}

.item--medium-explanation-style {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.item--medium-explanation-text-above-container {
  grid-area: 1/1/2/1;
}
/* ... */

